--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,17 +1,30 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: #023967
+$primary-invert: #fff
+$secondary: #871638
 $body-color: #333
-$black: #2b2523
+$black: #111
+$blue: #024e8d
 
-.navbar .navbar-menu
-  box-shadow:none !important
+// Links
+$link: $blue
+$link-invert: $secondary
+$link-visited: $link
+
+$link-hover: $secondary
+$link-hover-border: transparent
+
+$link-focus: $secondary
+$link-focus-border: $blue !default
+
+$link-active: $secondary
+$link-active-border: transparent
+
+//.navbar .navbar-menu
+  //box-shadow:none !important
 
 .content .taglist
   list-style: none
@@ -53,8 +66,7 @@ $black: #2b2523
 
 .btn
     display: inline-block
-    padding: 12px 16px 10px
-    font-size: 18px
+    padding: 12px 16px
     font-size: 1rem
     line-height: 1.25
     background-color: #fff
@@ -63,8 +75,6 @@ $black: #2b2523
     font-weight: 700
     color: #CC3700
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
@@ -84,13 +94,21 @@ footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
 
+//Navbar overrides
+$navbar-item-color: #333
+$navbar-item-hover-color: $primary
+$navbar-item-hover-background-color: transparent
+$navbar-item-active-color: $secondary
+$navbar-item-active-background-color: transparent
+$navbar-item-img-max-height: 3rem
+
 //Menu overrides
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
-$menu-item-active-color: $kaldi-red-invert
-$menu-item-active-background-color:	$kaldi-red-invert
-$menu-list-border-left: 1px solid $kaldi-red-invert
+$menu-item-active-color: $primary-invert
+$menu-item-active-background-color:	$primary-invert
+$menu-list-border-left: 1px solid $primary-invert
 $menu-label-color: $white-ter
 
 
