--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -5,9 +5,13 @@
 $primary: #023967
 $primary-invert: #fff
 $secondary: #871638
+$secondary-invert: #fff
 $body-color: #333
-$black: #111
+$black: #000
 $blue: #024e8d
+
+// Lists and maps
+$custom-colors: ("secondary": ($secondary, $secondary-invert))
 
 // Links
 $link: $blue
@@ -18,28 +22,20 @@ $link-hover: $secondary
 $link-hover-border: transparent
 
 $link-focus: $secondary
-$link-focus-border: $blue !default
+$link-focus-border: transparent
 
 $link-active: $secondary
 $link-active-border: transparent
 
-//.navbar .navbar-menu
-  //box-shadow:none !important
-
-.content .taglist
-  list-style: none
-  margin-bottom: 0
-  margin-left: 0
-  margin-right: 1.5rem
-  margin-top: 1.5rem
-  display: flex
-  flex-wrap: wrap
-  justify-content: left
-  align-items: center
-  li
-    padding: 0 2rem 1rem 0
-    margin-bottom: 1.5rem
-    margin-top: 0
+// Typography
+$family-secondary: 'Aleo', sans-serif
+.content
+  h1, h3, h4, h5
+    color: $primary !important
+  h2
+    color: $secondary
+h2
+  font-family: $family-secondary
 
 // Helper Classes
 .full-width-image-container
@@ -56,33 +52,35 @@ $link-active-border: transparent
   align-items: center
 
 .full-width-image
-    width: 100vw
-    height: 400px
-    background-size: cover
-    background-position: bottom
-    display: flex
-    justify-content: center
-    align-items: center
+  width: 100vw
+  height: 400px
+  background-size: cover
+  background-position: bottom
+  display: flex
+  justify-content: center
+  align-items: center
 
 .btn
-    display: inline-block
-    padding: 12px 16px
-    font-size: 1rem
-    line-height: 1.25
-    background-color: #fff
-    border-radius: .25rem
-    text-decoration: none
-    font-weight: 700
-    color: #CC3700
-    text-align: center
-    -webkit-transition: all .15s ease
-    transition: all .15s ease
+  display: inline-block
+  padding: 12px 16px
+  font-size: 1rem
+  line-height: 1.25
+  background-color: #fff
+  border-radius: .25rem
+  text-decoration: none
+  font-weight: 700
+  color: #CC3700
+  text-align: center
+  -webkit-transition: all .15s ease
+  transition: all .15s ease
 
 .margin-top-0
   margin-top: 0 !important
 
+.navbar
+  box-shadow: 0 0 10px rgba(0,0,0,0.1)
 .navbar-item .icon
-  color: $primary
+  color: $secondary
 // Override for use of svg's from https://simpleicons.org/
 .icon svg
   width: 1.5rem
@@ -130,13 +128,13 @@ $menu-label-color: $white-ter
     vertical-align: middle
     display: inline
 
-// blog roll
-.blog-list-item.is-featured
-  background-color: #d6400033
-.blog-list-item header
+// project roll
+.project-item.is-featured
+  background-color: rgba($secondary,0.1)
+.project-item header
   display: flex
   margin-bottom: 1em
-.blog-list-item .featured-thumbnail
+.project-item .featured-thumbnail
   flex-basis: 35%
   margin: 0 1.5em 0 0
 
@@ -146,13 +144,13 @@ $menu-label-color: $white-ter
 
 // responsiveness
 +tablet-only
-  .blog-list-item .featured-thumbnail
+  .project-item .featured-thumbnail
     flex-basis: 50%
 
 +mobile
-  .blog-list-item header
+  .project-item header
     display: block
-  .blog-list-item .featured-thumbnail
+  .project-item .featured-thumbnail
     text-align: center
     max-width: 70%
     margin: 0 0 1em
