--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -277,6 +277,7 @@ footer.footer
   height: auto
   opacity: 0.6
   margin: auto
+  max-height: 130px
 
 
 // =========================== Responsiveness
