--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -261,6 +261,11 @@ footer.footer
       background-color: rgba(lighten($secondary, 10%), 0.8)
     > *
       position: relative
+.home-page-wrap
+  .pg-head::before
+    background: linear-gradient(to bottom right, lighten($secondary, 5%) 30%, $secondary)
+  .title-wrap::before
+    background-color: rgba(lighten($secondary, 3%), 0.9)
 
 // project roll
 .project-item.is-featured
