--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -263,7 +263,8 @@ footer.footer
       position: relative
 .home-page-wrap
   .pg-head::before
-    background: linear-gradient(to bottom right, lighten($secondary, 5%) 30%, $secondary)
+    background: linear-gradient(to bottom right, lighten($secondary, 10%) 30%, $secondary)
+    opacity: .4
   .title-wrap::before
     background-color: rgba(lighten($secondary, 3%), 0.9)
 
