--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -263,10 +263,10 @@ footer.footer
       position: relative
 .home-page-wrap
   .pg-head::before
-    background: linear-gradient(to bottom right, lighten($secondary, 10%) 30%, $secondary)
-    opacity: .4
+    background: linear-gradient(to bottom right, lighten($secondary, 30%) 30%, $secondary)
+    opacity: .5
   .title-wrap::before
-    background-color: rgba(lighten($secondary, 3%), 0.9)
+    background-color: rgba($secondary, 0.9)
 
 // project roll
 .project-item.is-featured
