--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -45,6 +45,11 @@ $button-focus-border-color: $primary
 $button-focus-box-shadow-size: 0
 $button-focus-box-shadow-color: rgba($black, 0.15)
 
+// Box
+$box-background-color: #fcfcfc
+$box-radius: 0
+$box-shadow: 0 2px 10px rgba(0,0,0,0.2)
+
 // Navigation
 $navbar-height: 4.5rem
 $navbar-item-color: $grey-dark
