--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -316,8 +316,9 @@ ul.disease-list
   max-width: 600px
   margin: 1rem auto
   li
-    padding: 0.5rem 0 0.5rem 2rem
+    padding: 0.5rem 0 0.5rem 2.25rem
     position: relative
+    font-size: 1.125rem
     line-height: 25px
     &::before
       content: ''
