added home icon

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -264,7 +264,7 @@ footer.footer
       height: 100%
       top: 0
       right: -3rem
-      background-color: rgba(lighten($secondary, 10%), 0.8)
+      background-color: rgba($secondary, 0.8)
     > *
       position: relative
 .home-page-wrap
