--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -269,7 +269,7 @@ footer.footer
       position: relative
 .home-page-wrap
   .pg-head::before
-    background: none
+    background: linear-gradient(to bottom right, #e3537e 30%, $secondary)
   .title-wrap::before
     background-color: rgba($secondary, 0.9)
 
