updated home icon

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -152,6 +152,7 @@ $footer-padding: 3rem 1.5rem
   text-transform: uppercase
   letter-spacing: 1px
   font-size: 0.875em
+  font-weight: 500
 .navbar-item .icon
   color: $secondary
 .navbar-brand
