membership page added

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -85,7 +85,7 @@ $input-color: $grey-darker
 $input-background-color: #f9f9f9
 $input-border-color: transparent
 $input-border-width: 0
-$input-height: $control-height
+$input-height: 2.25em
 $input-shadow: 0 1px 5px rgba($black, 0.2)
 $input-placeholder-color: rgba($input-color, 0.3)
 
